2018-01-23  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.11

	* tests/test1.r: Set --cache_file to be witin tempdir() [CRAN request]
	* tests/test2.r: Idem
	* tests/test5.r: Idem
	* tests/test6.r: Idem
	* tests/test8.r: Idem
	* demo/vw.R: Idem
 	* man/vw.Rd: Idem (in example)

2017-12-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.10

	* man/vw.Rd: Refer to some files directly [CRAN request]
	* tests/test1.r: Idem
	* tests/test2.r: Idem
	* tests/test5.r: Idem
	* tests/test6.r: Idem
	* tests/test7.r: Idem
	* tests/test8.r: Idem
	* demo/vw.R: Idem

2017-03-05  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.9

	* src/R_vw.cpp (Rvw): Simplified via Rcpp Attributes
	* R/vw.R (vw): Now calls auto-exported function

	* src/init.c (R_init_RVowpalWabbit): Call R_registerRoutines() and
	R_useDynamicSymbols()

	* NAMESPACE: Use .registration=TRUE on useDynLib

	* .travis.yml: Switch to using run.sh for Travis CI

2016-10-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.8

	* tests/test2.r: Write prediction to tempdir() not /tmp
	* tests/test6.r: Ditto
	* tests/test8.r: Ditto

2016-07-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.0.7

	* src/allreduce.cc (all_reduce_init): Use ::bind()
	* src/parse_regressor.cc (save_predictor): Use delete[] with new[]

2015-10-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/R_vw.cpp: Comment-out gd.h header which is not needed

2015-10-11  Dirk Eddelbuettel  <edd@debian.org>

	* .travis.yml: Updated to use sudo, and install Rcpp via apt

2015-10-10  Dirk Eddelbuettel  <edd@debian.org>

	* src/lda_core.cc: Do not use #warning as it is gcc specific

	* src/parser.cc: Replace rand() with drand48() [properly scaled]
	* src/parse_regressor.cc: Ditto

2015-10-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Updates to DESCRIPTION (per R CMD check)
	* NAMESPACE: Ditto
